# balaka

./: .env.example  CONTRIBUTING.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/promotion/: launch-kit.md  release-v0.1.0.md  release-v0.2.0.md
src/balaka/: main.py
src/balaka/api/: __init__.py
src/balaka/api/routes/: __init__.py  tts.py
src/balaka/core/: config.py  voice_catalog.py
src/balaka/schemas/: __init__.py  tts.py
src/balaka/services/: __init__.py  speech.py
tests/: test_api.py
